--- a/app/src/main/res/layout/fragment_garden_overview.xml
+++ b/app/src/main/res/layout/fragment_garden_overview.xml
@@ -1,42 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.viewgarden.GardenOverviewFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="@dimen/spacing_medium">
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+    <ImageButton
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/tooltip_empty_garden"
-        android:visibility="gone"
-        android:padding="@dimen/spacing_small"
-        android:textSize="@dimen/font_medium"
-        android:textAlignment="center"
-        android:id="@+id/garden_text_view"/>
+        android:background="@null"
+        android:id="@+id/outdoors_button"
+        android:src="@drawable/outdoors"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="@dimen/picture"
+        android:layout_width="@dimen/picture"
+        android:layout_marginTop="@dimen/spacing_medium"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/gardens_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/new_location_btn"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/new_bed"
-        android:src="@drawable/ic_plus"
-        android:layout_margin="@dimen/spacing_medium"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintStart_toStartOf="@id/outdoors_button"
+        app:layout_constraintEnd_toEndOf="@id/outdoors_button"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        android:id="@+id/outdoors_text_view"
+        android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
+        android:text="@string/location_outdoors"/>
+
+    <ImageButton
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/outdoors_button"
+        android:background="@null"
+        android:id="@+id/greenhouse_button"
+        android:src="@drawable/greenhouse"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_height="@dimen/picture"
+        android:layout_width="@dimen/picture"
+        android:layout_marginTop="@dimen/spacing_medium"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/greenhouse_button"
+        app:layout_constraintEnd_toEndOf="@id/greenhouse_button"
+        app:layout_constraintTop_toBottomOf="@id/greenhouse_button"
+        android:textSize="@dimen/font_medium"
+        android:fontFamily="@font/roboto"
+        android:text="@string/location_greenhouse"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
