Starting a new season copies bed structure to new season

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -128,7 +128,7 @@
         android:label="SaveBedDialogFragment">
         <action
             android:id="@+id/save_bed_action"
-            app:destination="@id/gardenOverviewFragment" />
+            app:destination="@id/areaOverviewFragment" />
     </dialog>
     <dialog
         android:id="@+id/deleteBedConfirmationDialogFragment"
