--- a/app/src/main/res/layout/list_item_crop_rotation.xml
+++ b/app/src/main/res/layout/list_item_crop_rotation.xml
@@ -9,6 +9,14 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/plant_name_crop_rotation"/>
+        android:id="@+id/bed_name_crop_rotation"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/bed_name_crop_rotation"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="@dimen/spacing_medium"
+        android:id="@+id/seasons_croprotation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
