--- a/app/src/main/res/layout/fragment_custom_plant_dialog.xml
+++ b/app/src/main/res/layout/fragment_custom_plant_dialog.xml
@@ -150,10 +150,10 @@
                     android:id="@+id/plant_sowing_depth"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Sådybde i cm"
+                    android:hint="Sådybde"
                     android:autofillHints=""
                     android:layout_marginTop="@dimen/spacing_small"
-                    android:inputType="number" />
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
