Explanation on crop rotation

--- a/app/src/main/res/layout/fragment_crop_rotation.xml
+++ b/app/src/main/res/layout/fragment_crop_rotation.xml
@@ -6,9 +6,19 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/crop_rotation_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        style="@style/ButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/crop_rotation_button"
+        app:layout_constraintTop_toBottomOf="@id/crop_rotation_recycler_view"
+        android:id="@+id/guide_crop_rotation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
