--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -9,76 +9,149 @@
     tools:context=".fragments.dialogs.PlantDetailsDialogFragment">
 
     <TextView
+        android:id="@+id/plant_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Title"
+        android:textSize="@dimen/font_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/plant_details_dialog_plant"
-        android:textSize="@dimen/font_large"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/plant_details_dialog_plant"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/sort"
-        android:textSize="@dimen/font_small"
-        android:visibility="gone"/>
+        android:text="@string/sort"
+        style="@style/TitleTextView"
+        app:layout_constraintTop_toTopOf="@id/edit_sort_button"
+        app:layout_constraintBottom_toBottomOf="@id/edit_sort_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/sort_text"/>
 
     <TextView
-        android:layout_marginTop="@dimen/spacing_medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/sort"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/sort_text"
+        style="@style/DataTextView"
+        app:layout_constraintTop_toTopOf="@id/edit_sort_button"
+        app:layout_constraintBottom_toBottomOf="@id/edit_sort_button"
+        app:layout_constraintStart_toEndOf="@id/sort"
+        app:layout_constraintEnd_toStartOf="@id/edit_sort_button" />
+
+    <ImageButton
+        android:id="@+id/edit_sort_button"
+        android:contentDescription="@string/edit_sort"
+        style="@style/EditButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/sort_text"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/title_plants_details_dialog"
-        android:text="@string/title_dialog_plant_details"
-        android:textSize="@dimen/font_medium"/>
+        app:layout_constraintTop_toBottomOf="@id/plant_name" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/title_plants_details_dialog"
+        android:id="@+id/germinated"
+        style="@style/TitleTextView"
+        android:text="@string/germinated"
+        app:layout_constraintBottom_toBottomOf="@id/edit_germination_button"
+        app:layout_constraintEnd_toStartOf="@id/germinated_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="@dimen/spacing_small"
-        android:id="@+id/explanatory_text_plants_details_dialog"
-        android:text="@string/guide_dialog_plant_details"/>
+        app:layout_constraintTop_toTopOf="@id/edit_germination_button" />
 
-    <Button
+    <TextView
+        android:id="@+id/germinated_text"
+        style="@style/DataTextView"
+        app:layout_constraintTop_toTopOf="@id/edit_germination_button"
+        app:layout_constraintBottom_toBottomOf="@id/edit_germination_button"
+        app:layout_constraintStart_toEndOf="@id/germinated"
+        app:layout_constraintEnd_toStartOf="@id/edit_germination_button" />
+
+    <ImageButton
+        android:id="@+id/edit_germination_button"
+        android:contentDescription="@string/edit_germination"
+        style="@style/EditButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/germinated_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_sort_button" />
+
+    <TextView
+        android:id="@+id/planted"
+        style="@style/TitleTextView"
+        android:text="@string/planted"
+        app:layout_constraintBottom_toBottomOf="@id/planted_button"
+        app:layout_constraintEnd_toStartOf="@id/planted_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/planted_button" />
+
+    <TextView
+        android:id="@+id/planted_text"
+        style="@style/DataTextView"
+        app:layout_constraintTop_toTopOf="@id/planted_button"
+        app:layout_constraintBottom_toBottomOf="@id/planted_button"
+        app:layout_constraintStart_toEndOf="@id/planted"
+        app:layout_constraintEnd_toStartOf="@id/planted_button" />
+
+    <ImageButton
+        android:id="@+id/planted_button"
+        android:contentDescription="@string/planted"
+        style="@style/EditButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/planted_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edit_germination_button" />
+
+    <TextView
+        android:id="@+id/watered"
+        style="@style/TitleTextView"
+        android:text="@string/last_watered"
+        app:layout_constraintBottom_toBottomOf="@id/water_button"
+        app:layout_constraintEnd_toStartOf="@id/watered_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/water_button" />
+
+    <TextView
+        android:id="@+id/watered_text"
+        style="@style/DataTextView"
+        app:layout_constraintTop_toTopOf="@id/water_button"
+        app:layout_constraintBottom_toBottomOf="@id/water_button"
+        app:layout_constraintStart_toEndOf="@id/watered"
+        app:layout_constraintEnd_toStartOf="@id/water_button" />
+
+    <ImageButton
         android:id="@+id/water_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/spacing_small"
-        android:text="@string/water"
-        style="@style/SpecialButtonStyle"
-        app:layout_constraintEnd_toStartOf="@+id/harvest_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
-
-    <Button
-        android:id="@+id/harvest_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_small"
-        android:text="@string/harvest"
-        style="@style/SpecialButtonStyle"
+        android:contentDescription="@string/water"
+        style="@style/EditButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/watered_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/water_button"
-        app:layout_constraintTop_toBottomOf="@id/explanatory_text_plants_details_dialog" />
+        app:layout_constraintTop_toBottomOf="@id/planted_button" />
+
+    <TextView
+        android:id="@+id/harvested"
+        style="@style/TitleTextView"
+        android:text="@string/last_harvested"
+        app:layout_constraintBottom_toBottomOf="@id/harvest_button"
+        app:layout_constraintEnd_toStartOf="@id/harvested_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/harvest_button" />
+
+    <TextView
+        android:id="@+id/harvested_text"
+        style="@style/DataTextView"
+        app:layout_constraintTop_toTopOf="@id/harvest_button"
+        app:layout_constraintBottom_toBottomOf="@id/harvest_button"
+        app:layout_constraintStart_toEndOf="@id/harvested"
+        app:layout_constraintEnd_toStartOf="@id/harvest_button" />
+
+    <ImageButton
+        android:id="@+id/harvest_button"
+        android:contentDescription="@string/harvest"
+        style="@style/EditButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/harvested_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/water_button" />
 
     <Button
         android:id="@+id/details_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_small"
-        android:text="@string/details"
-        style="@style/ButtonStyle"
+        android:text="@string/to_lexicon"
+        style="@style/AcceptButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/water_button" />
+        app:layout_constraintTop_toBottomOf="@+id/harvest_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
