--- a/app/src/main/res/layout/fragment_lexicon.xml
+++ b/app/src/main/res/layout/fragment_lexicon.xml
@@ -4,19 +4,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <EditText
-        android:id="@+id/search_plant_edittext"
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_small"
-        android:fontFamily="@font/roboto"
-        android:hint="@string/search"
-        android:iconifiedByDefault="false"
-        android:lines="1"
-        android:textSize="@dimen/font_medium"
+        android:id="@+id/search_layout"
+        android:paddingStart="@dimen/spacing_xsmall"
+        android:paddingEnd="@dimen/spacing_xsmall"
+        android:paddingBottom="@dimen/spacing_xsmall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/search_plant_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/roboto"
+            android:hint="@string/search"
+            android:iconifiedByDefault="false"
+            android:lines="1"
+            android:textSize="@dimen/font_medium"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lexicon_recycler_view"
@@ -25,7 +35,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_plant_edittext" />
+        app:layout_constraintTop_toBottomOf="@id/search_layout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/new_plant_btn"
