--- a/app/src/main/res/layout/fragment_crop_rotation.xml
+++ b/app/src/main/res/layout/fragment_crop_rotation.xml
@@ -14,7 +14,7 @@
 
     <androidx.appcompat.widget.AppCompatButton
         style="@style/ButtonStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/picture"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/spacing_small"
         android:layout_marginTop="@dimen/spacing_small"
