Code review changes

--- a/app/src/main/res/layout/fragment_area_overview.xml
+++ b/app/src/main/res/layout/fragment_area_overview.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/new_location_btn"
+        android:id="@+id/new_bed_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/new_bed"
