--- a/app/src/main/res/layout/fragment_plant_details_dialog.xml
+++ b/app/src/main/res/layout/fragment_plant_details_dialog.xml
@@ -144,26 +144,40 @@
 
     <TextView
         android:id="@+id/notes"
+        android:layout_marginTop="@dimen/spacing_small"
         style="@style/TitleTextView"
         android:text="@string/notes"
-        app:layout_constraintBottom_toBottomOf="@id/notes_button"
-        app:layout_constraintEnd_toStartOf="@id/notes_button"
+        app:layout_constraintTop_toBottomOf="@id/harvested"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/notes_button" />
+         />
 
-    <TextView
-        android:id="@+id/notes_text"
-        style="@style/NotesTextView"
+    <ScrollView
+        android:id="@+id/notes_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/notes_scroll_view"
+        android:scrollbars="vertical"
+        android:fillViewport="true"
+        android:fadeScrollbars="false"
         app:layout_constraintTop_toBottomOf="@id/notes_button"
+        app:layout_constraintBottom_toTopOf="@id/details_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+            android:id="@+id/notes_text"
+            style="@style/NotesTextView"
+             />
+    </ScrollView>
+
 
     <ImageButton
         android:id="@+id/notes_button"
+        android:layout_marginTop="0dp"
         android:contentDescription="@string/notes"
         style="@style/EditButtonStyle"
         app:layout_constraintStart_toEndOf="@id/notes"
-        app:layout_constraintTop_toBottomOf="@id/harvest_button" />
+        app:layout_constraintTop_toTopOf="@id/notes"
+        app:layout_constraintBottom_toBottomOf="@id/notes"
+        />
 
     <Button
         android:id="@+id/details_button"
@@ -174,6 +188,7 @@
         style="@style/AcceptButtonStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notes_text" />
+        app:layout_constraintTop_toBottomOf="@+id/notes_scroll_view"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
