Now user can see a map, though it does not show where the user is

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
@@ -16,6 +15,12 @@
             android:title="@string/crop_rotation"/>
 
         <item
+            android:icon="@drawable/weather"
+            android:id="@+id/weatherDataFragment"
+            android:title="@string/weather_data"/>
+
+
+        <item
             android:id="@+id/gardenOverviewFragment"
             android:title="@string/beds">
             <menu>
@@ -28,6 +33,4 @@
             android:icon="@drawable/ic_plus"
             android:title="@string/new_season"/>
     </group>
-
-
 </menu>
