--- a/app/src/main/res/layout/fragment_weather_data.xml
+++ b/app/src/main/res/layout/fragment_weather_data.xml
@@ -36,8 +36,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/last_rained_text"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/turn_on_location_permissions"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
+
+    <Button
+        android:id="@+id/turn_on_location_permissions"
+        android:layout_marginTop="@dimen/spacing_medium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/map"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/ButtonStyle"
+        android:visibility="gone"
+        android:text="@string/turn_on_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
