--- a/app/src/main/res/layout/fragment_plantable_plants.xml
+++ b/app/src/main/res/layout/fragment_plantable_plants.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/spacing_small"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/outdoors_plantables_text_view"
-        android:layout_margin="@dimen/spacing_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/outdoors_plantables_recyclerview"
         android:textSize="@dimen/font_medium"
         android:text="@string/location_outdoors"/>
 
@@ -30,20 +32,25 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/outdoors_plantables_recyclerview"
-        android:layout_margin="@dimen/spacing_small"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/spacing_small"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
+        android:scrollbarStyle="insideOverlay"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/greenhouse_plantables_text_view"
         app:layout_constraintTop_toBottomOf="@id/outdoors_plantables_text_view"/>
 
     <TextView
         android:id="@+id/greenhouse_plantables_text_view"
-        android:layout_margin="@dimen/spacing_small"
+        android:layout_marginBottom="@dimen/spacing_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/outdoors_plantables_recyclerview"
+        app:layout_constraintBottom_toTopOf="@id/greenhouse_plantables_recyclerview"
         android:textSize="@dimen/font_medium"
         android:text="@string/location_greenhouse"/>
 
@@ -62,10 +69,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/greenhouse_plantables_recyclerview"
-        android:layout_margin="@dimen/spacing_small"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
+        android:scrollbarStyle="insideOverlay"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/greenhouse_plantables_text_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
