--- a/app/src/main/res/layout/fragment_area_overview.xml
+++ b/app/src/main/res/layout/fragment_area_overview.xml
@@ -29,12 +29,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/new_bed_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/new_bed"
-        android:src="@drawable/ic_plus"
+        app:icon="@drawable/ic_plus"
+        android:text="@string/new_bed"
         android:layout_margin="@dimen/spacing_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
