--- a/app/src/main/res/layout/fragment_lexicon.xml
+++ b/app/src/main/res/layout/fragment_lexicon.xml
@@ -23,7 +23,9 @@
             android:hint="@string/search"
             android:iconifiedByDefault="false"
             android:lines="1"
-            android:textSize="@dimen/font_medium"/>
+            android:textSize="@dimen/font_medium"
+            android:autofillHints="search"
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,13 +39,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_layout" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/new_plant_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/new_plant"
         android:layout_margin="@dimen/spacing_medium"
-        android:src="@drawable/ic_plus"
+        app:icon="@drawable/ic_plus"
+        android:text="@string/new_plant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
