--- a/app/src/main/res/values/styles_plant_details_dialog.xml
+++ b/app/src/main/res/values/styles_plant_details_dialog.xml
@@ -29,6 +29,7 @@
         <item name="android:layout_height">@dimen/icon</item>
         <item name="android:layout_width">@dimen/icon</item>
         <item name="android:layout_marginTop">@dimen/spacing_small</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="NotesTextView" parent="DataTextView">
